chore: java 17+ instruction